--- a/cards/Abeer.html
+++ b/cards/Abeer.html
@@ -777,7 +777,7 @@
     <!-- Header Section -->
     <header class="profile-header fade-in">
         <div class="cover-container">
-            <img src="https://i.imgur.com/6NqcfKK.jpeg" alt="عبير فاشن - عالم الأناقة والجمال" class="cover-photo">
+            <img src="https://i.imgur.com/6NqcfKK.jpeg" alt="ازياء ومخيطة عبير" class="cover-photo">
         </div>
         <div class="profile-info">
             <div class="profile-image-container">
