--- a/cards/Abeer.html
+++ b/cards/Abeer.html
@@ -783,7 +783,7 @@
             <div class="profile-image-container">
                 <img src="https://i.imgur.com/6NqcfKK.jpeg" alt="عبير فاشن" class="profile-image">
             </div>
-            <h1 class="profile-name">عبير فاشن</h1>
+            <h1 class="profile-name">ازياء ومخيطة عبير</h1>
             <p class="profile-title">عالم الأناقة والجمال</p>
             <div class="profile-badge">أناقتك تبدأ من هنا</div>
         </div>
