--- a/cards/Saleh-Abu-Ali.html
+++ b/cards/Saleh-Abu-Ali.html
@@ -626,7 +626,7 @@
         <img src="https://i.imgur.com/LHUiNMC.jpeg" alt="Cover Photo" class="cover-photo">
         <div class="profile-info">
             <div class="profile-image-container">
-                <img src="https://i.imgur.com/DAyiyMP.png" alt="Eng. Saleh AbuAli" class="profile-image">
+                <img src="https://i.imgur.com/ujyhIu8.jpeg" alt="Eng. Saleh AbuAli" class="profile-image">
                 <div class="profile-badge">
                     <i class="fas fa-cogs"></i>
                 </div>
