--- a/cards/Saleh-Abu-Ali.html
+++ b/cards/Saleh-Abu-Ali.html
@@ -815,7 +815,7 @@
         <div class="container">
             <p class="footer-text">Eng. Saleh AbuAli - Professional Portfolio</p>
             <p class="footer-text">CEO & Founder of Smart Service Company</p>
-            <p class="copyright">© 2024 All Rights Reserved</p>
+            <p class="copyright"></p>
         </div>
     </footer>
 
