--- a/cards/Card2.html
+++ b/cards/Card2.html
@@ -443,23 +443,23 @@
 
         <div class="rating-buttons">
             <a class="rate-btn"
-               href="mailto:info@smartservice-jo.com?subject=تقييم%20موظف%20رقم%202&body=أقيّم%20موظفكم%20رقم%202%20بدرجة%205%20من%205.%0Aملاحظاتي:%0A">
+               href="mailto:info@smartservicejo.com?subject=تقييم%20موظف%20رقم%202&body=أقيّم%20موظفكم%20رقم%202%20بدرجة%205%20من%205.%0Aملاحظاتي:%0A">
                 5 ★<span>ممتاز</span>
             </a>
             <a class="rate-btn"
-               href="mailto:info@smartservice-jo.com?subject=تقييم%20موظف%20رقم%202&body=أقيّم%20موظفكم%20رقم%202%20بدرجة%204%20من%205.%0Aملاحظاتي:%0A">
+               href="mailto:info@smartservicejo.com?subject=تقييم%20موظف%20رقم%202&body=أقيّم%20موظفكم%20رقم%202%20بدرجة%204%20من%205.%0Aملاحظاتي:%0A">
                 4 ★<span>جيد جداً</span>
             </a>
             <a class="rate-btn"
-               href="mailto:info@smartservice-jo.com?subject=تقييم%20موظف%20رقم%202&body=أقيّم%20موظفكم%20رقم%202%20بدرجة%203%20من%205.%0Aملاحظاتي:%0A">
+               href="mailto:info@smartservicejo.com?subject=تقييم%20موظف%20رقم%202&body=أقيّم%20موظفكم%20رقم%202%20بدرجة%203%20من%205.%0Aملاحظاتي:%0A">
                 3 ★<span>جيد</span>
             </a>
             <a class="rate-btn"
-               href="mailto:info@smartservice-jo.com?subject=تقييم%20موظف%20رقم%202&body=أقيّم%20موظفكم%20رقم%202%20بدرجة%202%20من%205.%0Aملاحظاتي:%0A">
+               href="mailto:info@smartservicejo.com?subject=تقييم%20موظف%20رقم%202&body=أقيّم%20موظفكم%20رقم%202%20بدرجة%202%20من%205.%0Aملاحظاتي:%0A">
                 2 ★<span>مقبول</span>
             </a>
             <a class="rate-btn"
-               href="mailto:info@smartservice-jo.com?subject=تقييم%20موظف%20رقم%۲۰&body=أقيّم%20موظفكم%20رقم%۲۰%20بدرجة%۲۰%20من%۲۰5.%0Aملاحظاتي:%0A">
+               href="mailto:info@smartservicejo.com?subject=تقييم%20موظف%20رقم%۲۰&body=أقيّم%20موظفكم%20رقم%۲۰%20بدرجة%۲۰%20من%۲۰5.%0Aملاحظاتي:%0A">
                 1 ★<span>سيئ</span>
             </a>
         </div>
