--- a/cards/Card3.html
+++ b/cards/Card3.html
@@ -453,7 +453,7 @@
         <div class="rating-hint">
             إذا لم يفتح البريد تلقائياً، يمكنك إرسال تقييمك إلى:
             <br>
-            <strong>info@smartservice-jo.com</strong>
+            <strong>info@smartservicejo.com</strong>
         </div>
     </section>
 
