--- a/cards/Card4.html
+++ b/cards/Card4.html
@@ -429,23 +429,23 @@
 
         <div class="rating-buttons">
             <a class="rate-btn"
-               href="mailto:info@smartservice-jo.com?subject=تقييم%20موظف%20رقم%204&body=أقيّم%20موظفكم%20رقم%204%20بدرجة%205%20من%205.%0Aملاحظاتي:%0A">
+               href="mailto:info@smartservicejo.com?subject=تقييم%20موظف%20رقم%204&body=أقيّم%20موظفكم%20رقم%204%20بدرجة%205%20من%205.%0Aملاحظاتي:%0A">
                 5 ★<span>ممتاز</span>
             </a>
             <a class="rate-btn"
-               href="mailto:info@smartservice-jo.com?subject=تقييم%20موظف%20رقم%204&body=أقيّم%20موظفكم%20رقم%204%20بدرجة%204%20من%205.%0Aملاحظاتي:%0A">
+               href="mailto:info@smartservicejo.com?subject=تقييم%20موظف%20رقم%204&body=أقيّم%20موظفكم%20رقم%204%20بدرجة%204%20من%205.%0Aملاحظاتي:%0A">
                 4 ★<span>جيد جداً</span>
             </a>
             <a class="rate-btn"
-               href="mailto:info@smartservice-jo.com?subject=تقييم%20موظف%20رقم%204&body=أقيّم%20موظفكم%20رقم%204%20بدرجة%203%20من%205.%0Aملاحظاتي:%0A">
+               href="mailto:info@smartservicejo.com?subject=تقييم%20موظف%20رقم%204&body=أقيّم%20موظفكم%20رقم%204%20بدرجة%203%20من%205.%0Aملاحظاتي:%0A">
                 3 ★<span>جيد</span>
             </a>
             <a class="rate-btn"
-               href="mailto:info@smartservice-jo.com?subject=تقييم%20موظف%20رقم%204&body=أقيّم%20موظفكم%20رقم%204%20بدرجة%202%20من%205.%0Aملاحظاتي:%0A">
+               href="mailto:info@smartservicejo.com?subject=تقييم%20موظف%20رقم%204&body=أقيّم%20موظفكم%20رقم%204%20بدرجة%202%20من%205.%0Aملاحظاتي:%0A">
                 2 ★<span>مقبول</span>
             </a>
             <a class="rate-btn"
-               href="mailto:info@smartservice-jo.com?subject=تقييم%20موظف%20رقم%204&body=أقيّم%20موظفكم%20رقم%204%20بدرجة%201%20من%205.%0Aملاحظاتي:%0A">
+               href="mailto:info@smartservicejo.com?subject=تقييم%20موظف%20رقم%204&body=أقيّم%20موظفكم%20رقم%204%20بدرجة%201%20من%205.%0Aملاحظاتي:%0A">
                 1 ★<span>سيئ</span>
             </a>
         </div>
@@ -453,7 +453,7 @@
         <div class="rating-hint">
             إذا لم يفتح البريد تلقائياً، يمكنك إرسال تقييمك إلى:
             <br>
-            <strong>info@smartservice-jo.com</strong>
+            <strong>info@smartservicejo.com</strong>
         </div>
     </section>
 
