--- a/cards/Saleh-Abu-Ali.html
+++ b/cards/Saleh-Abu-Ali.html
@@ -760,7 +760,7 @@
                     </div>
                     <div class="contact-label">Professional Email</div>
                     <div class="email-list">
-                        <a href="mailto:saleh-abuali@smartservice-jo.com" class="contact-value clickable">saleh-abuali@smartservice-jo.com</a>
+                        <a href="mailto:eng.saleh@smartservicejo.com" class="contact-value clickable">eng.saleh@smartservicejo.com</a>
                     </div>
                 </div>
                 
@@ -770,8 +770,8 @@
                     </div>
                     <div class="contact-label">Company Emails</div>
                     <div class="email-list">
-                        <a href="mailto:info@smartservice-jo.com" class="contact-value clickable">info@smartservice-jo.com</a>
-                        <a href="mailto:info2@smartservice-jo.com" class="contact-value clickable">info2@smartservice-jo.com</a>
+                        <a href="mailto:info@smartservicejo.com" class="contact-value clickable">info@smartservicejo.com</a>
+                        <a href="mailto:info2@smartservicejo.com" class="contact-value clickable">info2@smartservicejo.com</a>
                     </div>
                 </div>
             </div>
@@ -802,7 +802,7 @@
                     <i class="fas fa-phone"></i>
                     Call Now
                 </a>
-                <a href="mailto:saleh-abuali@smartservice-jo.com" class="action-button">
+                <a href="mailto:eng.saleh@smartservicejo.com" class="action-button">
                     <i class="fas fa-envelope"></i>
                     Send Email
                 </a>
