--- a/cards/Smart.html
+++ b/cards/Smart.html
@@ -1,237 +1,264 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Smart Services | NFC Card</title>
+<title>Eng. Saleh AbuAli - Professional Portfolio</title>
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800;900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
 
 <style>
 :root{
-    --bg:#020617;
-    --card:#020617;
-    --primary:#3b82f6;
-    --accent:#22d3ee;
-    --text:#e5e7eb;
-    --muted:#9ca3af;
-    --border:1px solid rgba(255,255,255,.08);
-    --shadow:0 25px 70px rgba(0,0,0,.85);
+    --bg:#0a0a0a;
+    --card:#111;
+    --accent:#ffd700;
+    --text:#fff;
+    --muted:#bbb;
+    --border:1px solid #333;
+    --shadow:0 15px 40px rgba(0,0,0,.6);
 }
 
 *{margin:0;padding:0;box-sizing:border-box;font-family:'Inter',sans-serif;}
 
 body{
-    background:radial-gradient(circle at top,#020617,#000);
+    background:var(--bg);
     color:var(--text);
-    min-height:100vh;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    padding:25px;
 }
 
-/* CARD */
+/* ================= HEADER ================= */
 
-.card{
-    width:100%;
-    max-width:430px;
+.profile-header{
+    position:relative;
     background:var(--card);
-    border-radius:28px;
-    box-shadow:var(--shadow);
-    border:var(--border);
-    padding:42px 32px;
-    text-align:center;
+    border-bottom:3px solid var(--accent);
 }
 
-/* LOGO */
-
-.logo{
-    width:110px;
-    height:110px;
-    border-radius:22px;
-    border:2px solid var(--primary);
-    margin:0 auto 20px;
+.cover-photo{
+    width:100%;
+    height:420px;
     object-fit:cover;
+    filter:brightness(.6);
 }
 
-/* TEXT */
-
-.name{
-    font-size:2rem;
-    font-weight:900;
+.profile-info{
+    text-align:center;
+    margin-top:-110px;
+    padding-bottom:40px;
 }
 
-.title{
-    margin-top:8px;
+.profile-image{
+    width:170px;
+    height:170px;
+    border-radius:50%;
+    border:4px solid var(--accent);
+    box-shadow:var(--shadow);
+}
+
+.profile-name{
+    font-family:'Playfair Display',serif;
+    font-size:2.8rem;
+    margin-top:20px;
+}
+
+.profile-title{
     color:var(--accent);
-    font-size:1rem;
-    font-weight:600;
+    letter-spacing:1px;
+    margin:8px 0 18px;
 }
 
-/* ACTION BUTTONS */
+/* ================= SOCIAL TOP ================= */
 
-.actions{
-    margin:34px 0;
-    display:grid;
-    gap:16px;
+.social-top{
+    display:flex;
+    justify-content:center;
+    gap:18px;
+    margin:25px 0;
 }
 
-.btn{
+.social-top a{
+    width:64px;
+    height:64px;
+    border-radius:50%;
+    background:var(--accent);
+    color:#000;
     display:flex;
     align-items:center;
     justify-content:center;
-    gap:12px;
-    padding:16px;
-    font-size:1.05rem;
-    font-weight:700;
-    color:white;
-    background:linear-gradient(135deg,var(--primary),#1e40af);
-    border-radius:18px;
-    text-decoration:none;
+    font-size:1.6rem;
     box-shadow:var(--shadow);
     transition:.3s;
+    text-decoration:none;
 }
 
-.btn.secondary{
-    background:#020617;
+.social-top a:hover{
+    transform:translateY(-6px) scale(1.05);
+    background:#fff2a8;
+}
+
+/* ================= CONTAINERS ================= */
+
+.container{
+    max-width:1100px;
+    margin:auto;
+    padding:40px 20px;
+}
+
+.section{
+    background:var(--card);
     border:var(--border);
-}
-
-.btn i{font-size:1.3rem;}
-
-.btn:hover{
-    transform:translateY(-4px) scale(1.02);
-}
-
-/* ABOUT AR */
-
-.about-ar{
-    margin-top:30px;
-    padding:20px;
-    background:#020617;
     border-radius:20px;
+    padding:40px;
+    margin-bottom:40px;
+    box-shadow:var(--shadow);
+}
+
+/* SERVICES */
+
+.services-grid{
+    display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+    gap:20px;
+    margin-top:30px;
+}
+
+.service-card{
+    background:#000;
     border:var(--border);
-    font-size:.95rem;
-    line-height:1.9;
-    direction:rtl;
-    text-align:center;
-    color:#e5e7eb;
-}
-
-/* SOCIAL */
-
-.social{
-    display:flex;
-    justify-content:center;
-    gap:14px;
-    margin-top:26px;
-}
-
-.social a{
-    width:56px;
-    height:56px;
-    display:flex;
-    align-items:center;
-    justify-content:center;
     border-radius:16px;
-    background:#020617;
-    border:var(--border);
-    color:var(--primary);
-    font-size:1.4rem;
+    padding:25px;
+    text-align:center;
     transition:.3s;
 }
 
-.social a:hover{
-    background:var(--primary);
-    color:white;
+.service-card:hover{
+    transform:translateY(-6px);
+    background:rgba(255,215,0,.08);
+}
+
+.service-card i{
+    font-size:1.8rem;
+    color:var(--accent);
+    margin-bottom:12px;
+}
+
+/* CONTACT */
+
+.contact-grid{
+    display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+    gap:20px;
+    margin-top:25px;
+}
+
+.contact-card{
+    background:#000;
+    border:var(--border);
+    border-radius:16px;
+    padding:25px;
+    text-align:center;
+}
+
+.contact-card i{
+    font-size:1.6rem;
+    color:#000;
+    background:var(--accent);
+    width:60px;
+    height:60px;
+    border-radius:50%;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    margin:0 auto 15px;
+}
+
+.contact-card a{
+    color:var(--accent);
+    text-decoration:none;
+    font-weight:700;
 }
 
 /* FOOTER */
 
-.footer{
-    margin-top:30px;
-    font-size:.75rem;
+footer{
+    text-align:center;
+    padding:30px;
+    border-top:3px solid var(--accent);
     color:var(--muted);
 }
 
-/* MOBILE */
+/* RESPONSIVE */
 
-@media(max-width:380px){
-    .name{font-size:1.7rem;}
-    .logo{width:90px;height:90px;}
+@media(max-width:600px){
+    .profile-name{font-size:2rem;}
+    .profile-image{width:135px;height:135px;}
+    .social-top a{width:54px;height:54px;font-size:1.3rem;}
 }
 </style>
 </head>
 
 <body>
 
-<div class="card">
+<header class="profile-header">
+    <img src="https://i.imgur.com/LHUiNMC.jpeg" class="cover-photo">
 
-    <img src="https://i.imgur.com/dD3AJOO.jpeg" class="logo" alt="Smart Services">
+    <div class="profile-info">
+        <img src="https://i.imgur.com/ujyhIu8.jpeg" class="profile-image">
 
-    <div class="name">Smart Services</div>
-    <div class="title">Maintenance • Electrical • Plumbing</div>
+        <h1 class="profile-name">Eng. Saleh AbuAli</h1>
+        <div class="profile-title">Professional Engineer & Business Leader</div>
 
-    <!-- MAIN ACTIONS -->
-    <div class="actions">
-        <a href="tel:+962793300010" class="btn">
-            <i class="fas fa-phone"></i> Call Now
-        </a>
+        <!-- 🔥 SOCIAL TOP -->
+        <div class="social-top">
+            <a href="https://www.facebook.com/saleh.abuali.94" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://wa.me/962793030004" target="_blank"><i class="fab fa-whatsapp"></i></a>
+            <a href="mailto:eng.saleh@smartservicejo.com"><i class="fas fa-envelope"></i></a>
+            <a href="tel:+962793030004"><i class="fas fa-phone"></i></a>
+        </div>
+    </div>
+</header>
 
-        <a href="https://wa.me/962793300010" class="btn">
-            <i class="fab fa-whatsapp"></i> WhatsApp
-        </a>
+<div class="container">
 
-        <a href="#" class="btn secondary" onclick="downloadVCard()">
-            <i class="fas fa-address-card"></i> Save Contact
-        </a>
+    <div class="section">
+        <h2>Smart Service Company</h2>
+        <p style="color:#ccc;margin-top:15px;text-align:center;">
+            Leading professional maintenance and technical services provider in Jordan.
+        </p>
+
+        <div class="services-grid">
+            <div class="service-card"><i class="fas fa-tools"></i><h3>AC Maintenance</h3></div>
+            <div class="service-card"><i class="fas fa-snowflake"></i><h3>AC Installation</h3></div>
+            <div class="service-card"><i class="fas fa-charging-station"></i><h3>EV Chargers</h3></div>
+            <div class="service-card"><i class="fas fa-gas-pump"></i><h3>Gas Refilling</h3></div>
+        </div>
     </div>
 
-    <!-- ABOUT ARABIC -->
-    <div class="about-ar">
-        شركة <strong>Smart Services</strong> هي من كبرى شركات الصيانة المستقلة في الأردن،
-        نقدم حلول صيانة متكاملة تشمل الصيانة العامة، الأعمال الكهربائية، والسباكة،
-        بخبرة طويلة وفريق محترف يضمن أعلى مستويات الجودة والموثوقية لعملائنا في جميع أنحاء المملكة.
-    </div>
+    <div class="section">
+        <h2>Contact Information</h2>
 
-    <!-- SOCIAL -->
-    <div class="social">
-        <a href="https://www.facebook.com/share/1b5ek8Qgg7/"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/smartservicejordan"><i class="fab fa-instagram"></i></a>
-        <a href="https://maps.google.com/maps?q=31.988962173461914,35.90753936767578">
-            <i class="fas fa-map-marker-alt"></i>
-        </a>
-    </div>
-
-    <div class="footer">
-        Tap • Connect • Smart Services
+        <div class="contact-grid">
+            <div class="contact-card">
+                <i class="fas fa-phone"></i>
+                <a href="tel:+962793030004">+962 79 303 0004</a>
+            </div>
+            <div class="contact-card">
+                <i class="fas fa-envelope"></i>
+                <a href="mailto:eng.saleh@smartservicejo.com">eng.saleh@smartservicejo.com</a>
+            </div>
+            <div class="contact-card">
+                <i class="fas fa-building"></i>
+                <a href="mailto:info@smartservicejo.com">info@smartservicejo.com</a>
+            </div>
+        </div>
     </div>
 
 </div>
 
-<script>
-function downloadVCard(){
-    const vcard = `BEGIN:VCARD
-VERSION:3.0
-N:Services;Smart;;;
-FN:Smart Services
-ORG:Smart Services Jordan
-TITLE:Maintenance Company
-TEL;TYPE=CELL:+962793300010
-TEL;TYPE=WHATSAPP:+962793300010
-URL:https://wa.me/962793300010
-ADR;TYPE=WORK:;;Amman;Jordan;;;
-END:VCARD`;
-
-    const blob = new Blob([vcard], { type: 'text/vcard' });
-    const link = document.createElement('a');
-    link.href = URL.createObjectURL(blob);
-    link.download = 'SmartServices.vcf';
-    link.click();
-}
-</script>
+<footer>
+    Eng. Saleh AbuAli • CEO – Smart Service Company
+</footer>
 
 </body>
 </html>
