--- a/cards/Abdallah_Haqqie.html
+++ b/cards/Abdallah_Haqqie.html
@@ -623,14 +623,14 @@
 <body>
     <!-- Header Section -->
     <header class="profile-header fade-in">
-        <img src="https://i.imgur.com/j98VCJT.jpeg" alt="Abdallah Haqqie Cover" class="cover-photo">
+        <img src="https://i.imgur.com/j98VCJT.jpeg" alt="Game Developer Workspace Cover" class="cover-photo">
         
         <!-- Purple Separator Line -->
         <div class="purple-separator"></div>
         
         <div class="profile-info">
             <div class="profile-image-container">
-                <img src="https://i.imgur.com/j98VCJT.jpeg" alt="Abdallah Haqqie" class="profile-image">
+                <img src="https://i.imgur.com/daYiyMP.png" alt="Abdallah Haqqie" class="profile-image">
             </div>
             <h1 class="profile-name">Abdallah Haqqie</h1>
             <p class="profile-title">Game Developer & Creative Technologist</p>
@@ -794,7 +794,7 @@
         <div class="container">
             <p class="footer-text">Abdallah Haqqie - Game Developer Portfolio</p>
             <p class="footer-text">Crafting digital experiences, one line of code at a time</p>
-            <p class="copyright">© 2024 Abdallah Haqqie. All rights reserved.</p>
+            <p class="copyright">© Abdallah Haqqie. All rights reserved.</p>
         </div>
     </footer>
 
