--- a/cards/Abdallah_Haqqie.html
+++ b/cards/Abdallah_Haqqie.html
@@ -630,7 +630,7 @@
         
         <div class="profile-info">
             <div class="profile-image-container">
-                <img src="https://i.imgur.com/daYiyMP.png" alt="Abdallah Haqqie" class="profile-image">
+                <img src="https://i.imgur.com/lealsFz.jpeg" alt="Abdallah Haqqie" class="profile-image">
             </div>
             <h1 class="profile-name">Abdallah Haqqie</h1>
             <p class="profile-title">Game Developer & Creative Technologist</p>
