--- a/cards/M&R_Market.html
+++ b/cards/M&R_Market.html
@@ -784,7 +784,7 @@
             <p style="color: var(--medium-text); margin-bottom: 20px;">شاهد فيديو تعريفي عن سوق M&R Market وعروضنا الحصرية</p>
             
             <div class="video-container">
-                <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2Fshare%2Fv%2F1Fb4BgMWoV%2F&show_text=false&width=560&t=0" 
+                <iframe src="https://youtu.be/_6vpm8QyOq8" 
                         frameborder="0" 
                         allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" 
                         allowfullscreen>
