--- a/cards/M&R_Market.html
+++ b/cards/M&R_Market.html
@@ -784,9 +784,9 @@
             <p style="color: var(--medium-text); margin-bottom: 20px;">شاهد فيديو تعريفي عن سوق M&R Market وعروضنا الحصرية</p>
             
             <div class="video-container">
-                <iframe src="https://youtu.be/_6vpm8QyOq8" 
+                <iframe src="https://www.youtube.com/embed/_6vpm8QyOq8" 
                         frameborder="0" 
-                        allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                         allowfullscreen>
                 </iframe>
             </div>
