--- a/cards/M&R_Market.html
+++ b/cards/M&R_Market.html
@@ -700,14 +700,14 @@
 <body>
     <!-- Header Section -->
     <header class="profile-header fade-in">
-        <img src="https://i.imgur.com/kaFlnHH.jpeg" alt="M&R Market Cover" class="cover-photo">
+        <img src="https://i.imgur.com/kaFlnHH.jpeg" alt="M&R Market Cover" class="cover-photo" onerror="this.src='https://via.placeholder.com/1200x350/2E7D32/FFFFFF?text=M%26R+Market+Cover'">
         
         <!-- الخط الأخضر الفاصل -->
         <div class="green-separator"></div>
         
         <div class="profile-info">
             <div class="profile-image-container">
-                <img src="https://i.imgur.com/kaFlnHH.jpeg" alt="M&R Market" class="profile-image">
+                <img src="https://i.imgur.com/kaFlnHH.jpeg" alt="M&R Market" class="profile-image" onerror="this.src='https://via.placeholder.com/150/4CAF50/FFFFFF?text=M%26R'">
             </div>
             <h1 class="profile-name">M&R Market</h1>
             <p class="profile-title">سوق مواد تموينية ومنظفات</p>
@@ -756,16 +756,16 @@
             <div class="gallery-container">
                 <div class="gallery-slider" id="gallerySlider">
                     <div class="gallery-slide">
-                        <img src="https://i.imgur.com/J5wOtww.jpeg" alt="منتجات M&R Market">
+                        <img src="https://i.imgur.com/J5wOtww.jpeg" alt="منتجات M&R Market" onerror="this.src='https://via.placeholder.com/800x300/4CAF50/FFFFFF?text=منتجات+M%26R+Market'">
                     </div>
                     <div class="gallery-slide">
-                        <img src="https://i.imgur.com/IX3NpO6.jpeg" alt="أجبان وألبان">
+                        <img src="https://i.imgur.com/IX3NpO6.jpeg" alt="أجبان وألبان" onerror="this.src='https://via.placeholder.com/800x300/4CAF50/FFFFFF?text=أجبان+وألبان'">
                     </div>
                     <div class="gallery-slide">
-                        <img src="https://i.imgur.com/mZJhden.jpeg" alt="مشروبات وعصائر">
+                        <img src="https://i.imgur.com/mZJhden.jpeg" alt="مشروبات وعصائر" onerror="this.src='https://via.placeholder.com/800x300/4CAF50/FFFFFF?text=مشروبات+وعصائر'">
                     </div>
                     <div class="gallery-slide">
-                        <img src="https://i.imgur.com/vpQMNfi.jpeg" alt="منظفات ومنتجات تنظيف">
+                        <img src="https://i.imgur.com/vpQMNfi.jpeg" alt="منظفات ومنتجات تنظيف" onerror="this.src='https://via.placeholder.com/800x300/4CAF50/FFFFFF?text=منظفات+ومنتجات+تنظيف'">
                     </div>
                 </div>
             </div>
