--- a/cards/M&R_Market.html
+++ b/cards/M&R_Market.html
@@ -759,13 +759,13 @@
                         <img src="https://i.imgur.com/J5wOtww.jpeg" alt="منتجات M&R Market" onerror="this.src='https://via.placeholder.com/800x300/4CAF50/FFFFFF?text=منتجات+M%26R+Market'">
                     </div>
                     <div class="gallery-slide">
-                        <img src="https://i.imgur.com/IX3NpO6.jpeg" alt="أجبان وألبان" onerror="this.src='https://via.placeholder.com/800x300/4CAF50/FFFFFF?text=أجبان+وألبان'">
+                        <img src="https://i.imgur.com/w71QEc2.jpeg" alt="أجبان وألبان" onerror="this.src='https://via.placeholder.com/800x300/4CAF50/FFFFFF?text=أجبان+وألبان'">
                     </div>
                     <div class="gallery-slide">
-                        <img src="https://i.imgur.com/mZJhden.jpeg" alt="مشروبات وعصائر" onerror="this.src='https://via.placeholder.com/800x300/4CAF50/FFFFFF?text=مشروبات+وعصائر'">
+                        <img src="https://i.imgur.com/pxttM1J.jpeg" alt="مشروبات وعصائر" onerror="this.src='https://via.placeholder.com/800x300/4CAF50/FFFFFF?text=مشروبات+وعصائر'">
                     </div>
                     <div class="gallery-slide">
-                        <img src="https://i.imgur.com/vpQMNfi.jpeg" alt="منظفات ومنتجات تنظيف" onerror="this.src='https://via.placeholder.com/800x300/4CAF50/FFFFFF?text=منظفات+ومنتجات+تنظيف'">
+                        <img src="https://i.imgur.com/T15O0ce.jpeg" alt="منظفات ومنتجات تنظيف" onerror="this.src='https://via.placeholder.com/800x300/4CAF50/FFFFFF?text=منظفات+ومنتجات+تنظيف'">
                     </div>
                 </div>
             </div>
