--- a/cards/Salon_Ramez.html
+++ b/cards/Salon_Ramez.html
@@ -905,7 +905,7 @@
         <div class="container">
             <p class="footer-text">Ramez Beauty Salon - Premium Beauty Services for Women</p>
             <p class="footer-text">Professional beauty treatments and grooming services exclusively for women</p>
-            <p class="copyright">© 2024 Ramez Beauty Salon. All rights reserved.</p>
+            <p class="copyright">©Ramez Beauty Salon. All rights reserved.</p>
         </div>
     </footer>
 
