--- a/cards/M&R_Market.html
+++ b/cards/M&R_Market.html
@@ -870,7 +870,7 @@
         <div class="container">
             <p class="footer-text">M&R Market - سوق مواد تموينية ومنظفات</p>
             <p class="footer-text">البان اجبان مواد تموين - منظفات جميع الانواع - سكاكر اشباس عصائر مشروبات غازية</p>
-            <p class="copyright">© 2024 M&R Market. جميع الحقوق محفوظة.</p>
+            <p class="copyright">©M&R Market. جميع الحقوق محفوظة.</p>
         </div>
     </footer>
 
