--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>NFC Card</title>
 </head>
-<body style="font-family: sans-serif; text-align:center; margin-top:40px;">
-  <h2>يرجى فتح الرابط من بطاقة NFC مباشرة</h2>
+<body style="font-family:sans-serif;text-align:center;margin-top:40px">
+  <h3>يرجى لمس بطاقة NFC لفتح الصفحة</h3>
 </body>
 </html>
